tests/ui/extern/foreign-fn-pattern-error-10877.stderr
error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/foreign-fn-pattern-error-10877.rs:7:12
   |
LL |     fn foo(1: ());
   |            ^ pattern not allowed in foreign function

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/foreign-fn-pattern-error-10877.rs:9:12
   |
LL |     fn bar((): isize);
   |            ^^ pattern not allowed in foreign function

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/foreign-fn-pattern-error-10877.rs:11:12
   |
LL |     fn baz(Foo { x }: isize);
   |            ^^^^^^^^^ pattern not allowed in foreign function

error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/foreign-fn-pattern-error-10877.rs:13:12
   |
LL |     fn qux((x, y): ());
   |            ^^^^^^ pattern not allowed in foreign function

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0130`.
